# demo_qt

./: CMakeLists.txt
src/: Makefile  cmake_install.cmake
src/mainwindow_autogen/: moc_predefs.h
ui/: CMakeLists.txt  Makefile  mainwindow.ui
ui/123_autogen/: moc_predefs.h
ui/123_autogen/DGKZTCOIDE/: moc_mainwindow.cpp
ui/123_autogen/include/: ui_mainwindow.h
window/: CMakeLists.txt  Makefile  cmake_install.cmake
